force-app/main/default/objects/BMCServiceDesk__BMC_IPConnectivitySubnet__c/BMCServiceDesk__BMC_IPConnectivitySubnet__c.object-meta.xml
<CustomObject>
    <description>BMC_IPConnectivitySubnet. CMDB Class that stores information about groups of related IP protocol endpoints that can communicate with each other as members of a subnet. This class describes the characteristics of the subnet. Endpoint instances are related to an instance of this class by a BMC_InIPSubnet relationship. This class corresponds to the DMTF CIM_IPConnectivitySubnet class.</description>
    <label>IP Connectivity Subnet</label>
    <nameField>
        <label>IP Connectivity Subnet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Connectivity Subnet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>