force-app/main/default/objects/BMCServiceDesk__BMC_IPConnectivitySubnet__c/fields/BMCServiceDesk__Address_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPv4</fullName>
            </value>
            <value>
                <fullName>IPv6</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>