force-app/main/default/objects/BMCServiceDesk__BMC_IPConnectivitySubnet__c/fields/BMCServiceDesk__Exploration_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Exploration_Date__c</fullName>
    <label>Exploration Date</label>
    <type>DateTime</type>
</CustomField>