force-app/main/default/objects/BMCServiceDesk__BMC_IPConnectivitySubnet__c/fields/BMCServiceDesk__Prefix_Length__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Prefix_Length__c</fullName>
    <label>Prefix Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>