force-app/main/default/objects/BMCServiceDesk__BMC_IPConnectivitySubnet__c/fields/BMCServiceDesk__Subnet_Mask__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Subnet_Mask__c</fullName>
    <label>Subnet Mask</label>
    <length>30</length>
    <type>Text</type>
</CustomField>