force-app/main/default/objects/BMCServiceDesk__BMC_IPConnectivitySubnet__c/fields/BMCServiceDesk__Subnet_Number__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Subnet_Number__c</fullName>
    <label>Subnet Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>